[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background/1_foreground.png" type="Texture" id=2]
[ext_resource path="res://Scenes/CameraSetup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MiniUfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/BigAlienBomb.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sound/Music/1932 Cab Calloway - Hot Water (instrumental).ogg" type="AudioStream" id=7]
[ext_resource path="res://Scenes/AlienShip.tscn" type="PackedScene" id=204]
[ext_resource path="res://Background/2_midground.png" type="Texture" id=205]
[ext_resource path="res://Background/7_sky.png" type="Texture" id=210]
[ext_resource path="res://Background/4_letters.png" type="Texture" id=211]
[ext_resource path="res://Background/3_mountains.png" type="Texture" id=212]
[ext_resource path="res://Background/5_stars_front.png" type="Texture" id=213]
[ext_resource path="res://Background/6_stars_back.png" type="Texture" id=214]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1148.5, 54 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48.5, 555.5 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )
miniUFO = ExtResource( 5 )
bigBomb = ExtResource( 6 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
bob_amount = 8

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enable = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -84, -848 )
motion_scale = Vector2( 0, 0 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( -934, 275 )
scale = Vector2( 1.08714, 1.25343 )
z_index = -1000
z_as_relative = false
texture = ExtResource( 210 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -84, -848 )
motion_scale = Vector2( 0.13, 0.1 )

[node name="Stars2" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( -971, 324 )
scale = Vector2( 1.08714, 1.25343 )
z_index = -1000
z_as_relative = false
texture = ExtResource( 214 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -84, -848 )
motion_scale = Vector2( 0.03, 0.03 )

[node name="Stars1" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( -966, 424 )
scale = Vector2( 1.08714, 1.25343 )
z_index = -1000
z_as_relative = false
texture = ExtResource( 213 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )

[node name="Mountains" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -940, -545 )
scale = Vector2( 1, 1.56 )
texture = ExtResource( 212 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )

[node name="Letters" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -1000, -542 )
texture = ExtResource( 211 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -962, -542 )
motion_scale = Vector2( 0.4, 0.4 )

[node name="Midground" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 67, -65 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 205 )

[node name="Floor" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -7, -50 )
scale = Vector2( 1.08, 1.09 )
texture = ExtResource( 2 )
flip_h = true

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( -45, 20 )
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 21, 490 )
shape = SubResource( 1 )

[node name="AlienBody" parent="." instance=ExtResource( 204 )]
position = Vector2( 645, 239 )

[node name="PlayerBody" parent="." instance=ExtResource( 1 )]
position = Vector2( -545, 425 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.0
autoplay = true

[node name="Wall" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 502, -23 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2( -945.5, -24 )
shape = SubResource( 7 )

[node name="T1" type="Node2D" parent="."]
position = Vector2( 0, -56 )

[node name="UfoLeft" type="Position2D" parent="T1"]
position = Vector2( -846, -360 )

[node name="UfoRight" type="Position2D" parent="T1"]
position = Vector2( 442, -360 )

[node name="T2" type="Node2D" parent="."]
position = Vector2( 0, 64 )

[node name="UfoLeft" type="Position2D" parent="T2"]
position = Vector2( -846, -360 )

[node name="UfoRight" type="Position2D" parent="T2"]
position = Vector2( 442, -360 )

[node name="T3" type="Node2D" parent="."]
position = Vector2( 0, 170 )

[node name="UfoLeft" type="Position2D" parent="T3"]
position = Vector2( -846, -360 )

[node name="UfoRight" type="Position2D" parent="T3"]
position = Vector2( 442, -360 )

[node name="SpawnUFOTimer" type="Timer" parent="."]
wait_time = 12.0

[node name="BombSpawnPosition" type="Position2D" parent="."]
position = Vector2( 547, 157 )

[node name="BigBombTimer" type="Timer" parent="."]
wait_time = 12.0

[node name="BombBarrage" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnUFOTimer" to="." method="_on_SpawnUFOTimer_timeout"]
[connection signal="timeout" from="BigBombTimer" to="." method="_on_BigBombTimer_timeout"]
[connection signal="timeout" from="BombBarrage" to="." method="_on_BombBarrage_timeout"]
